Correct name spelling in leadership bios

--- a/founder.html
+++ b/founder.html
@@ -110,7 +110,7 @@
                     <h3>Shahabzada Mian Muhammad Sohaib Suchyar Naushahi</h3>
                     <p class="leadership-role">Co-Founder</p>
                     <div class="leadership-bio">
-                        <p>Shahabzada Mian Muhammad Sohaib Suchyar Naushahi, the son of the founder, has been an integral part of Awan-e-Faqr-e-Naushahia's mission and growth. His contributions have been instrumental in shaping the organization's educational and welfare initiatives.</p>
+                        <p>Sahibzada Mian Muhammad Sohaib Suchyar Naushahi, the son of the founder, has been an integral part of Awan-e-Faqr-e-Naushahia's mission and growth. His contributions have been instrumental in shaping the organization's educational and welfare initiatives.</p>
 
                         <p>Educated in herbal sciences and holding a BA degree, Shahabzada Mian Muhammad Sohaib Suchyar Naushahi brought a unique combination of traditional knowledge and formal education to the organization. His expertise in herbal sciences reflects the organization's commitment to preserving and sharing traditional wisdom alongside modern learning.</p>
                         
@@ -129,7 +129,7 @@
             <div class="leadership-content">
                 <h2 class="section-title">Descendants & Legacy</h2>
                 <div class="leadership-card">
-                    <h3>Sahabzada Muhammad Mounis Murad Naushahi</h3>
+                    <h3>Sahibzada Muhammad Mounis Murad Naushahi</h3>
                     <p class="leadership-role">Founder of Naushahi Foundation</p>
                     <div class="leadership-bio">
                         <p>Muhammad Mounis Murad Naushahi represents the continuing legacy of service and dedication established by his forebears. Currently pursuing an <strong>MS in International Business Management (IBM)</strong> at the <strong>University of Bradford</strong>, he combines academic excellence with a deep commitment to humanitarian service.</p>
